fixed weird spacing + responsiveness and fixed some other details

--- a/src/index.css
+++ b/src/index.css
@@ -80,31 +80,28 @@ body {
 
 .intro-header{
   font-weight: 200;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  padding-top: 10px;
 }
 
-.sample-text{
+.intro-text{
   font-family: "Fira Sans Extra Condensed", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 1.5rem;
+  font-size: 2.0rem;
+  padding-bottom: 6rem;
+  /* border-bottom: rgb(163, 162, 162) dotted; */
 }
 
-.responsive-svg {
+/* .responsive-svg {
   width: 70%;
   height: auto;
   max-width: 100%;
-}
+} */
 
 /* ABOUT */
-.about-container{
-  margin: 10px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
 .aboutMePic{
-  width: 70%;
+  width: 55%;
   height: auto;
   box-shadow: 0px 15px 10px -15px #6e6e6e; 
 }
@@ -113,6 +110,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; 
+  margin: 10px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .about-col {
@@ -122,21 +122,31 @@ body {
 .about-title{
   font-size: 5rem;
   padding-bottom: 20px;
+  font-family: "Bodoni Moda SC", serif;
 }
+
+@media (max-width: 480px) {
+  .about-title {
+    font-size: 3rem;
+    padding: 15px 0; 
+  }
+}
+
 .about-text{
   font-size: 1.2rem;
 }
 
 /* PROJECTS */
 .project-container{
-  padding: 10rem 0 10rem 0;
-  margin: 25px 0;
+  padding: 10rem 5%;
+  margin: 15px 0;
   background-color: white;
 }
 
 .project-title{
   padding-left: 50px;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
+  font-family: "Fira Sans Extra Condensed", sans-serif;
   font-weight: 300;
   font-size: 60px;
 }
@@ -150,10 +160,18 @@ body {
   text-decoration: none; 
   display: block;
 }
+.site-title{
+  font-family: "Bodoni Moda SC", serif;
+  padding-top: 1rem;
+}
+
+.description{
+  font-family: "Fira Sans Extra Condensed", sans-serif;
+  padding-top: 1.5rem;
+}
 
 .project-card {
-  position: relative;
-  overflow: hidden;
+  margin: 5px;
   transition: transform 0.3s ease-in-out;
   box-shadow: 10px 15px 10px -15px #6e6e6e; 
 }
@@ -170,7 +188,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 1;
+  z-index: 2;
   filter: grayscale(80%);
 }
 
@@ -180,7 +198,7 @@ body {
 }
 
 .project-card .card-body {
-  z-index: 2;
+  z-index: 3;
   background-color: #c7c5be; 
   color: white;
   transition: background-color 0.3s ease-in-out;
@@ -210,6 +228,7 @@ body {
 }
 .skills{
   font-weight: 300;
+  font-family: "Bodoni Moda SC", serif;
   font-size: 75px;
   padding: 10px;
 }
@@ -251,6 +270,10 @@ body {
   padding: 10rem 0 10rem 0;
   border-top: #82827c solid;
  }
+.contact-title{
+  font-family: "Bodoni Moda SC", serif;
+  font-weight: 700;
+}
 
  .contact-pic{
   width: 40%;
